# capsdac-ml-pipeline-v2

./: Makefile  README.md  pyproject.toml  requirements.txt
dashboards/: streamlit_app.py
data/processed/: monthly_enrollment_features.csv
forecasting/scripts/: generate_visualization_report.py  run_capsdac_pipeline.py
forecasting/src/capsdac_ml/: feature_engineering.py  forecasting.py  model_selection.py
models/: capsdac_level2_best_forecast_model.joblib
outputs/forecasts/: site_forecast.csv  statewide_forecast.csv  vendor_forecast.csv
outputs/metrics/: model_leaderboard.csv  model_metrics.json  time_series_cv_results.json
outputs/reports/: drift_report.json  run_summary.md
serving/api/: main.py
tests/: test_feature_engineering.py
