[project]
name = "capsdac-ml-platform"
version = "2.2.0"
description = "Level 2 ML-enabled CAPSDAC enrollment forecasting platform with model comparison, time-series validation, drift monitoring, and serving."
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "joblib",
  "pyyaml",
  "matplotlib",
  "fastapi",
  "uvicorn",
  "google-cloud-storage",
  "google-cloud-bigquery",
  "google-cloud-aiplatform",
]

[tool.pytest.ini_options]
pythonpath = ["forecasting"]
testpaths = ["tests"]
